--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,6 +9,7 @@ body {
   font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: #f5f0ec;
 }
 
 code {
