--- a/client/src/components/dropdown/dropdown.css
+++ b/client/src/components/dropdown/dropdown.css
@@ -2,10 +2,14 @@
   margin-bottom: 5px;
   color: hsl(0deg 0% 49%);
 }
+.dropdown__container {
+    margin: 0 25px;
+}
 
 .dropdown__select{
 margin-top: 5px;
 display: block;
+font-size: 14px;
 }
 
 .css-qc6sy-singleValue {
