--- a/client/src/components/input/number.css
+++ b/client/src/components/input/number.css
@@ -26,6 +26,12 @@ border: solid 1px hsl(0, 0%, 80%);
    color:hsl(0deg 0% 49%);
  }
 
+ .number__input input::placeholder {
+   padding-left: 10px;
+  font-size: 14px;
+
+}
+
  @media screen and (max-width: 726px) {
 .number__input{
     width: 100%;
